--- a/example/xarm_config.yaml
+++ b/example/xarm_config.yaml
@@ -1,26 +1,12 @@
-{
-  "robots": [
-    {
-      "robot_type": "xarm",
-      "robot_ip": "192.168.1.211",  # Replace with your xArm's IP
-      "robot_obs_latency": 0.02,
-      "robot_action_latency": 0.1,
-      "tcp_offset": 0.2,  # Adjust if necessary
-      "height_threshold": 0.024,  # Adjust based on your setup
-      "sphere_radius": 0.0,  # Disable collision avoidance for single robot
-      "sphere_center": [0.0, 0.0, 0.0]  # Not used for single robot
-    }
-  ],
-  "grippers": [
-    {
-      "gripper_obs_latency": 0.01,
-      "gripper_action_latency": 0.1
-    }
-  ],
-  "tx_left_right": [
-    [1, 0, 0, 0],
-    [0, 1, 0, 0],
-    [0, 0, 1, 0],
-    [0, 0, 0, 1]
-  ]
-}
+{ "robots": [
+      {
+        "robot_type": "xarm",
+        "robot_ip": "192.168.1.123", # Replace with your xArm's IP
+        "robot_obs_latency": 0.02,
+        "robot_action_latency": 0.1,
+        "tcp_offset": 0.2, # Adjust if necessary
+        "height_threshold": 0.024, # Adjust based on your setup
+        "sphere_radius": 0.0, # Disable collision avoidance for single robot
+        "sphere_center": [0.0, 0.0, 0.0], # Not used for single robot
+      },
+    ], "grippers": [{ "gripper_obs_latency": 0.01, "gripper_action_latency": 0.1 }], "tx_left_right": null }
